; ModuleID = '/home/carl/AnghaBench/git/extr_utf8.c_is_hfs_dot_generic.c'
source_filename = "/home/carl/AnghaBench/git/extr_utf8.c_is_hfs_dot_generic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64)* @is_hfs_dot_generic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_hfs_dot_generic(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8, align 1
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = call signext i8 @next_hfs_char(i8** %5)
  store i8 %9, i8* %8, align 1
  %10 = load i8, i8* %8, align 1
  %11 = sext i8 %10 to i32
  %12 = icmp ne i32 %11, 46
  br i1 %12, label %13, label %14

13:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %50

14:                                               ; preds = %3
  br label %15

15:                                               ; preds = %34, %14
  %16 = load i64, i64* %7, align 8
  %17 = icmp ugt i64 %16, 0
  br i1 %17, label %18, label %39

18:                                               ; preds = %15
  %19 = call signext i8 @next_hfs_char(i8** %5)
  store i8 %19, i8* %8, align 1
  %20 = load i8, i8* %8, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp sgt i32 %21, 127
  br i1 %22, label %23, label %24

23:                                               ; preds = %18
  store i32 0, i32* %4, align 4
  br label %50

24:                                               ; preds = %18
  %25 = load i8, i8* %8, align 1
  %26 = call signext i8 @tolower(i8 signext %25)
  %27 = sext i8 %26 to i32
  %28 = load i8*, i8** %6, align 8
  %29 = load i8, i8* %28, align 1
  %30 = sext i8 %29 to i32
  %31 = icmp ne i32 %27, %30
  br i1 %31, label %32, label %33

32:                                               ; preds = %24
  store i32 0, i32* %4, align 4
  br label %50

33:                                               ; preds = %24
  br label %34

34:                                               ; preds = %33
  %35 = load i8*, i8** %6, align 8
  %36 = getelementptr inbounds i8, i8* %35, i32 1
  store i8* %36, i8** %6, align 8
  %37 = load i64, i64* %7, align 8
  %38 = add i64 %37, -1
  store i64 %38, i64* %7, align 8
  br label %15

39:                                               ; preds = %15
  %40 = call signext i8 @next_hfs_char(i8** %5)
  store i8 %40, i8* %8, align 1
  %41 = load i8, i8* %8, align 1
  %42 = sext i8 %41 to i32
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %49

44:                                               ; preds = %39
  %45 = load i8, i8* %8, align 1
  %46 = call i32 @is_dir_sep(i8 signext %45)
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %49, label %48

48:                                               ; preds = %44
  store i32 0, i32* %4, align 4
  br label %50

49:                                               ; preds = %44, %39
  store i32 1, i32* %4, align 4
  br label %50

50:                                               ; preds = %49, %48, %32, %23, %13
  %51 = load i32, i32* %4, align 4
  ret i32 %51
}

declare dso_local signext i8 @next_hfs_char(i8**) #1

declare dso_local signext i8 @tolower(i8 signext) #1

declare dso_local i32 @is_dir_sep(i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
